--- a/styles/globals.css
+++ b/styles/globals.css
@@ -97,3 +97,15 @@
 .sub-hero-text_2 {
   @apply text-white text-base md:text-lg;
 }
+
+.blue-bg {
+  background: #172d44;
+}
+
+.text-theme {
+  color: #f5f5f5;
+}
+
+.hero-text_3 {
+  @apply text-2xl md:text-4xl font-bold;
+}
