--- a/styles/globals.css
+++ b/styles/globals.css
@@ -78,6 +78,10 @@
   @apply text-[13px] text-[#242424];
 }
 
+.paragraph-text_white {
+  @apply text-[13px];
+}
+
 .head-text_3 {
   @apply text-[15px] font-semibold text-[#242424];
 }
